# brocade-rs

./: Cargo.toml  README.md
src/: brocade.rs  error.rs  lib.rs
src/brocade/: product.rs
