[package]
name = "brocade"
description = "Interface for querying brocade.io products"
homepage = "https://github.com/dangarbri/brocade-rs"
documentation = "https://github.com/dangarbri/brocade-rs"
repository = "https://github.com/dangarbri/brocade-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["brocade", "barcode"]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking", "json"], optional = true}
serde = {version = "1.0.152", features = ["derive"], optional = true}
serde_json = {version = "1.0.93", optional = true}

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:serde", "dep:serde_json"]